WEB | ADMIN | improve admin navigation

--- a/projects/web/translations/messages.en.yaml
+++ b/projects/web/translations/messages.en.yaml
@@ -5,6 +5,7 @@ nav:
     found_pets: "Found Pets"
     publish: "Publish"
     my_account: "My Account"
+    admin: "Administration"
 
 language:
     spanish: "Español"
