--- a/projects/web/translations/messages.es.yaml
+++ b/projects/web/translations/messages.es.yaml
@@ -5,6 +5,7 @@ nav:
     found_pets: "Avistados"
     publish: "Publicar"
     my_account: "Mi Cuenta"
+    admin: "Administración"
 
 language:
     spanish: "Español"
