WEB | REGISTRATION | Localize password mismatch error message
- Replace hardcoded password mismatch error message with translatable string.
- Add English and Spanish translations for the password mismatch message.

--- a/projects/web/translations/messages.en.yaml
+++ b/projects/web/translations/messages.en.yaml
@@ -498,6 +498,7 @@ auth:
             password_placeholder: "Your password"
             confirm_password: "Confirm Password"
             confirm_password_placeholder: "Confirm your password"
+            password_mismatch: "❌ Passwords do not match"
             email_notifications: "Receive email notifications"
             create_account: "Create Account"
 
