WEB | STYLE | Enhance found and lost pets templates
- Refactor HTML structure for better readability and maintainability.
- Update the layout for active and claimed animals sections to improve user experience.
- Add new status badge for animals under protection with corresponding translations in English and Spanish.
- Implement responsive design adjustments for mobile and desktop views.
- Improve action buttons with tooltips for better accessibility and user guidance.

--- a/projects/web/translations/messages.en.yaml
+++ b/projects/web/translations/messages.en.yaml
@@ -305,6 +305,7 @@ animal:
             found: "Found"
             claimed: "Claimed"
             filled: "Archived"
+            under_protection: "Under Protection"
 
         gender:
             male: "Male"
