WEB | EMAIL & TEMPLATES | Update support contact information and enhance footer
- Change support email address in ShelterEmailService to mypetfinder.website@gmail.com.
- Refactor HTML structure in shelter_rejected.html.twig for improved readability.
- Add contact information with email link in the footer component.
- Update translation files to include new contact labels in English and Spanish.

--- a/projects/web/translations/messages.en.yaml
+++ b/projects/web/translations/messages.en.yaml
@@ -27,6 +27,8 @@ common:
 
 footer:
     tagline: "Connecting families with their lost pets since 2025"
+    contact: "Contact"
+    email_label: "Email"
 
 lost_pets:
     title: "Lost Pets"
