--- a/projects/web/translations/messages.es.yaml
+++ b/projects/web/translations/messages.es.yaml
@@ -27,6 +27,8 @@ common:
 
 footer:
     tagline: "Conectando familias con sus mascotas perdidas desde 2025"
+    contact: "Contacto"
+    email_label: "Email"
 
 lost_pets:
     title: "Mascotas Perdidas"
